2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:
	* generic/tk.h:
	* mac/README:
	* unix/README:
	* unix/configure:
	* unix/configure.in:
	* unix/tcl.m4:
	* unix/tk.spec:
	* win/README:
	* win/configure:
	* win/configure.in:
	* win/tcl.m4:

2002-10-11  Joe English  <jenglish@flightlab.com>

	* unix/tkUnixWm.c: (rev. 1.8.1.3) Backported changes for
	TIP 107 ("Fix the 2-second raise delay") to core-8-3-1-branch 
	[Patch #601518]
	* tests/unixWm.c (unixWm-51.7): added 200 ms delay after
	'raise' and 'lower' commands, since these are now asynchronous.
	(NB: there may be other regressions, this is the only one
	I encountered)

2002-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/grid.test:
	* generic/tkGrid.c: The grid size was not updated properly
	when removing a widget from a grid. [Bug #621241] (forssen)

	* generic/tkCanvas.h: moved TkColormapData struct to tkCanvPs.c
	* generic/tkCanvPs.c (TkImageGetColor): corrected bogus use of
	TkColormapData on Windows (Windows now requires RGB pixel data
	from image).
	* win/tkWinImage.c (XGetImage, XGetImageZPixmap): added support
	for generating ps for embedded widgets on canvases on Windows,
	tested for 8, 16, 24 and 32-bit depths (XGetImageZPixmap not used).

	* unix/configure: regen
	* unix/tcl.m4: replaced SC_ENABLE_MEMDEBUG with a more intelligent
	SC_ENABLE_SYMBOLS that takes yes|no|mem|all as options now.

2002-07-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tk.tcl (RestoreFocusGrab): handle the case where the
	FocusGrab info is not set. [Bug #553283]

2002-07-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/canvas.test: added canvas-14.[1-6]
	* generic/tkCanvas.c (CanvasWidgetCmd): corrected handling of
	'scan' subcommand args.  Also removed early return cases to goto
	done instead where the canvasPtr would be Tcl_Release'd.  This may
	solve other problems with unreleased canvasPtr's. [Bug #581560]

2002-06-22  Jeff Hobbs  <jeffh@ActiveState.com>
